--- a/src/components/ui/app-header/app-header.module.css
+++ b/src/components/ui/app-header/app-header.module.css
@@ -17,7 +17,7 @@
 .link {
   display: flex;
   text-decoration: none;
-  color: var(--text-inactive-color);
+  transition: color 0.2s ease;
 }
 
 .link_active {
