--- a/src/components/ui/ingredient-details/ingredient-details.module.css
+++ b/src/components/ui/ingredient-details/ingredient-details.module.css
@@ -22,3 +22,20 @@
   flex-direction: column;
   align-items: center;
 }
+
+.page {
+  padding: 40px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  margin: 0 0 24px;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
