--- a/src/components/ui/order-info/order-info.module.css
+++ b/src/components/ui/order-info/order-info.module.css
@@ -14,6 +14,11 @@
   margin: 0;
 }
 
+.pageHeader {
+  padding: 120px 0 0 0;
+  text-align: center;
+}
+
 .img_wrap {
   width: 64px;
   height: 64px;
